--- a/09-CSS-Positioning/homework/homework.html
+++ b/09-CSS-Positioning/homework/homework.html
@@ -12,9 +12,12 @@
       <h3>Instrucciones:</h3>
       <span id="instructions">
           En esta tarea vamos a usar las propiedades "display", "position" y "flex box"
-          para posicionar nuestros elementos correctamente en la página. El único archivo que necesitas
-          tocar para esta tarea es el archivo "homework.css" que se encuentra en esta misma carpeta.
-          Debes usar las clases, ids y selectores de elemnto que usaste en la tarea número 2.
+          para posicionar nuestros elementos correctamente en la página. 
+          El único archivo que necesitas
+          tocar para esta tarea es el archivo "homework.css" 
+          que se encuentra en esta misma carpeta.
+          Debes usar las clases, ids y selectores de elemnto 
+          que usaste en la tarea número 2.
       </span>
     </div>
     <div class="container">
@@ -23,25 +26,33 @@
           En este primer ejercicio deberás asegurarte que el texto dentro de este &lt;span&gt;
           está centrado en la página. El id de este span es "ejercicioUno". El texto solo tiene un
           forma de alinear conocido como "text-align", para el cual podemos definir
-          los valores "left", "right", "center" o "justify", pero esto solo funcion dentro de los elementos "block"
-          y el &lt;span&gt; inicialmente es un elemento "inline". Define la propiedad "display" para
+          los valores "left", "right", "center" o "justify", 
+          pero esto solo funcion dentro de los elementos "block"
+          y el &lt;span&gt; inicialmente es un elemento "inline". 
+          Define la propiedad "display" para
           que sea "block" y centra el texto usando "text-align".
       </span>
     </div>
     <div class="container">
       <h3>Ejercicio 2:</h3>
       <span>
-         Hay una caja con un texto en la parte superior de la pantalla. Eso se supone que es un "placeholder" hasta que tengamos el título de la sección definido. Desafortunadamente no tenemos acceso
-         al HTML, por lo que no podemos ocultarlo modificando el HTML. Usando sólo CSS, asegúrate que la caja no
+         Hay una caja con un texto en la parte superior de la pantalla. 
+         Eso se supone que es un "placeholder" hasta que tengamos el título de la sección definido.
+          Desafortunadamente no tenemos acceso
+         al HTML, por lo que no podemos ocultarlo modificando el HTML. Usando sólo CSS, 
+         asegúrate que la caja no
          sea mostrada. El id de lo que tenes que ocultar es "ejercicioDos".
       </span>
     </div>
     <div class="container">
       <h3>Ejercicio 3:</h3>
       <span>
-          Debajo verás una caja, la cual contiene adentro una imagen, nos queremos asegurar que esa imagen se
-          posicione dentro de la cajita roja. Debes cambiar el atributo "position", y después ajustar la imagen acorde a la caja.
-          La caja roja está a 100 píxeles del margen superior y 200 píxeles desde la izquierda. El id de la imagen en "ejercicioTres".
+          Debajo verás una caja, la cual contiene adentro una imagen,
+           nos queremos asegurar que esa imagen se
+          posicione dentro de la cajita roja. Debes cambiar el atributo "position",
+           y después ajustar la imagen acorde a la caja.
+          La caja roja está a 100 píxeles del margen superior y 200 píxeles desde la izquierda. 
+          El id de la imagen en "ejercicioTres".
       </span>
       <div id="containerImagen">
         <div id="containerObjetivo"></div>
@@ -55,8 +66,10 @@
       <h3>Ejercicio 4:</h3>
       <span>
           La caja azul de abajo se supone que debe ser nuestro header, por lo que debe estar fijo
-          en la parte superior izquierda de la página, y la posición no debería variar cuando la página sea scrolleada.
-          El id de la caja es "ejercicioCuatro". Cambia la posición de esa caja a la esquina superior izquierda.
+          en la parte superior izquierda de la página,
+           y la posición no debería variar cuando la página sea scrolleada.
+          El id de la caja es "ejercicioCuatro". Cambia la posición de esa caja a 
+          la esquina superior izquierda.
       </span>
     </div>
     <div id="ejercicioCuatro">
@@ -86,9 +99,12 @@
     <div class="container">
       <h3>Ejercicio 7:</h3>
       <span>
-          Este es un "playground" de la propiedad flexbox, el id es "ejercicioSiete". No hay un objetivo final en este ejercicio,
-          puedes jugar con estos elementos y las diferentes opciones de flexbox. El id de los elementos están escritos en los mismos.
-          Prueba usando los conceptos que aprendimos sobre flexbox, incluyendo: "justify-content", "align-items", "align-self",
+          Este es un "playground" de la propiedad flexbox, el id es "ejercicioSiete".
+           No hay un objetivo final en este ejercicio,
+          puedes jugar con estos elementos y las diferentes opciones de flexbox.
+           El id de los elementos están escritos en los mismos.
+          Prueba usando los conceptos que aprendimos sobre flexbox, incluyendo: 
+          "justify-content", "align-items", "align-self",
           y "flex-direction".
       </span>
     </div>
@@ -103,7 +119,8 @@
       <span>
           Hay bastantes opciones de flexbox y pueden complicarse, pero a través de la prática puedes aprender
           a ajustar rápidamente el posicionamiento de tus elementos con facilidad. Te recomendamos el tutorial
-        "Flexbox Froggy", el cual te enseñará en profundidad cómo funciona el elemento de posicionamiento "flexbox":
+        "Flexbox Froggy", el cual te enseñará en profundidad cómo funciona el elemento de posicionamiento
+         "flexbox":
         <a href="http://www.flexboxfroggy.com" target="_blank_">Flexbox Froggy</a>
       </span>
     </div>
